@@ -21,6 +21,10 @@ update-manager (1:0.121) UNRELEASEDkarmic; urgency=low
     - after updating the sources.list, check for both existance
       and downloadability of the BaseMetaPkgs and abort if that
       is not the case (thanks to Ulrich Kalkkuhl) LP: #370062
+  * UpdateManager/UpdateManager.py:
+    - show origin field for other updates (like PPAs) to make it
+      easier to see what comes from where (part of the 
+      foundations-karmic-apturl-policy spec)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 30 Apr 2009 09:22:42 +0200
 
